#2258 Ability to provide interfaces to be implemented by generated entity proxy types